@@ -109,7 +109,8 @@
 #define IPMI_MONITORING_SEL_FLAGS_MASK                    \
   (IPMI_MONITORING_SEL_FLAGS_REREAD_SDR_CACHE             \
    | IPMI_MONITORING_SEL_FLAGS_INTERPRET_OEM_DATA         \
-   | IPMI_MONITORING_SEL_FLAGS_ASSUME_SYSTEM_EVENT_RECORD)
+   | IPMI_MONITORING_SEL_FLAGS_ASSUME_SYSTEM_EVENT_RECORD \
+   | IPMI_MONITORING_SEL_FLAGS_ENTITY_SENSOR_NAMES)
 
 #define IPMI_MONITORING_SENSOR_READING_FLAGS_MASK                          \
   (IPMI_MONITORING_SENSOR_READING_FLAGS_REREAD_SDR_CACHE                   \
@@ -119,7 +120,8 @@
    | IPMI_MONITORING_SENSOR_READING_FLAGS_SHARED_SENSORS                   \
    | IPMI_MONITORING_SENSOR_READING_FLAGS_DISCRETE_READING                 \
    | IPMI_MONITORING_SENSOR_READING_FLAGS_IGNORE_SCANNING_DISABLED         \
-   | IPMI_MONITORING_SENSOR_READING_FLAGS_ASSUME_BMC_OWNER)
+   | IPMI_MONITORING_SENSOR_READING_FLAGS_ASSUME_BMC_OWNER                 \
+   | IPMI_MONITORING_SENSOR_READING_FLAGS_ENTITY_SENSOR_NAMES)
 
 #define IPMI_MONITORING_AUTHENTICATION_TYPE_DEFAULT           IPMI_AUTHENTICATION_TYPE_MD5
 #define IPMI_MONITORING_PRIVILEGE_LEVEL_DEFAULT               IPMI_PRIVILEGE_LEVEL_USER
